# Hyper-Spherical-Systems

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  EXECUTABLE_ARTIFACT_OUTPUT.py  FINAL_SUCCESS_REPORT.txt  PirateLlama_Installer.bat  README.md  blueprint.json  build_installer.ps1  config.hpp.bak1  config.hpp.bak2  config.hpp.bak3  config.yaml  config_gui.yaml  create_dummy_gguf.py  deployment_status_proof.py  dummy.gguf  dummy.hscc  harness_hook.hpp.bak1  harness_hook.hpp.bak3  install.ps1  installer_stub.bat  launch_ui.py  pirate_bridge.cpp  pirate_recovery.py  python_bridge.dll.bak1  python_bridge.dll.bak3  run_gui.bat  tesseract_bridge.cpp  tesseract_bridge.exe.bak2  tesseract_bridge.exe.bak3  tesseract_core.exe.bak1  tesseract_core.exe.bak2  tesseract_core.exe.bak3  tesseract_recovery.py  tests.cpp.bak1  tests.cpp.bak3
build_enterprise/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Project_Hyperspherical_Core.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  golden_candy_spinner.vcxproj  golden_candy_spinner.vcxproj.filters  nvme_benchmark.vcxproj  nvme_benchmark.vcxproj.filters  pirate_bridge.vcxproj  pirate_bridge.vcxproj.filters  pirate_core.vcxproj  pirate_core.vcxproj.filters  pirate_llama.vcxproj  pirate_llama.vcxproj.filters  pirate_security_tests.vcxproj  pirate_security_tests.vcxproj.filters  pirate_tests.vcxproj  pirate_tests.vcxproj.filters  python_bridge.vcxproj  python_bridge.vcxproj.filters
build_enterprise/Release/: pirate_bridge.exp  python_bridge.exp
build_enterprise/golden_candy_spinner.dir/Release/: golden_candy_spinner.exe.recipe
build_enterprise/nvme_benchmark.dir/Release/: nvme_benchmark.exe.recipe
build_enterprise/pirate_bridge.dir/Release/: pirate_bridge.exe.recipe
build_enterprise/pirate_core.dir/Release/: pirate_core.exe.recipe
build_enterprise/pirate_llama.dir/Release/: pirate_llama.exe.recipe  pirate_llama.iobj
build_enterprise/pirate_security_tests.dir/Release/: pirate_security_tests.exe.recipe
build_enterprise/pirate_tests.dir/Release/: pirate_tests.exe.recipe
build_enterprise/python_bridge.dir/Release/: python_bridge.dll.recipe
build_test/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Project_Hyperspherical_Core.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  golden_candy_spinner.vcxproj  golden_candy_spinner.vcxproj.filters  nvme_benchmark.vcxproj  nvme_benchmark.vcxproj.filters  pirate_bridge.vcxproj  pirate_bridge.vcxproj.filters  pirate_core.vcxproj  pirate_core.vcxproj.filters  pirate_llama.vcxproj  pirate_llama.vcxproj.filters  pirate_tests.vcxproj  pirate_tests.vcxproj.filters  python_bridge.vcxproj  python_bridge.vcxproj.filters
build_test/Debug/: python_bridge.exp  python_bridge.lib
build_test/Release/: pirate_bridge.exp  pirate_bridge.lib  python_bridge.exp
build_test/golden_candy_spinner.dir/Release/: golden_candy_spinner.exe.recipe
build_test/nvme_benchmark.dir/Release/: nvme_benchmark.exe.recipe
build_test/pirate_bridge.dir/Release/: pirate_bridge.exe.recipe
build_test/pirate_core.dir/Release/: pirate_core.exe.recipe
build_test/pirate_llama.dir/Release/: pirate_llama.exe.recipe  pirate_llama.iobj
docs/: brochure.html  draw_grid.py  fix_image.py  generate_pdf.py
docs/screenshots/: _inspect.py  _inspect2.py  _run_playwright.py  viewer.html
dotnet/: PirateEngineBridge.cs
gui/: server.py
gui/pirate_gui/: __init__.py  __main__.py  bridge.py  dashboard.py  index.html  wizard.py
gui/tesseract_gui/: __init__.py  __main__.py  bridge.py  config_io.py  dashboard.py  wizard.py
include/: arterial_bridge.hpp  auto_embedder.hpp  candy_spinner.hpp  config.hpp  config_store.hpp  context_compression_cramming_declutterizer.hpp  context_compressor.hpp  conversation_manager.hpp  crypto_engine.hpp  dictionary_store.hpp  dom_parser.hpp  drm_manager.hpp  feature_router.hpp  gateway_scanner.hpp  gguf_reader.hpp  gpu_detect.hpp  harness_hook.hpp  homophonic_cipher.hpp  huggingface_client.hpp  human_telemetry.hpp  hypersphere.hpp  index_registry.hpp  layer_illusionist.hpp  leet_cipher.hpp  license_manager.hpp  macro_recorder.hpp  matrix_slicer.hpp  memory_manager.hpp  mnecp_handshake.hpp  mobile_bridge.hpp  model_router.hpp  multimodal_engine.hpp  neuron_graph.hpp  nvme_benchmark.hpp  nvme_io.hpp  onboarding_wizard.hpp  orchestrator_bridge.hpp  pirate_gui.hpp  pirate_proxy.hpp  predictive_prefetcher.hpp  (+26 more)
keygen_server/: main.py  requirements.txt
pirate_authenticator/: settings.gradle.kts
pirate_authenticator/app/: build.gradle.kts
release/: HOWTO.md  README.md  launch_hypes_linux.sh  launch_hypes_mac.sh
src/: arterial_bridge.cpp  auto_embedder.cpp  blowfish_sboxes.inl  candy_spinner.cpp  context_compression_cramming_declutterizer.cpp  context_compressor.cpp  conversation_manager.cpp  crypto_engine.cpp  decay.gguf.tesseract_profiles.json  dictionary_store.cpp  dom_parser.cpp  drm_manager.cpp  feature_router.cpp  flush-test.gguf.hypersphere_profiles.json  flush-test.gguf_main.trf  gateway_scanner.cpp  gguf_reader.cpp  harness_hook.cpp  homophonic_cipher.cpp  huggingface_client.cpp  human_telemetry.cpp  hypersphere.cpp  index_registry.cpp  layer_illusionist.cpp  leet_cipher.cpp  license_manager.cpp  macro_recorder.cpp  main.cpp  matrix_slicer.cpp  memory_manager.cpp  mnecp_handshake.cpp  mobile_bridge.cpp  model-A.gguf.tesseract_profiles.json  model_router.cpp  multimodal_engine.cpp  neuron_graph.cpp  nvme_benchmark.cpp  nvme_benchmark_main.cpp  nvme_io.cpp  onboarding_wizard.cpp  (+37 more)
src/model/: compressed_embedding_model.py
src/tools/: golden_candy_spinner.py
tests/: python_bridge_smoke.py  test_embedding_model.py  test_golden_candy_spinner.py
tests/candy_output/: dummy_model.gguf.hypersphere_profiles.json
tools/: fetch_recursive_brain.ps1
tools/community_patcher/: PirateLlama_patch.cpp  build_patcher.bat  build_patcher.ps1
tools/golden_candy_spinner/: golden_candy_spinner.cpp
(+174 files in other folders)
